--- a/juegoshtml/Jmatematico.html
+++ b/juegoshtml/Jmatematico.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Juego de suma</title>
-    <link rel="icon" href="/edukids/assets/img/logo2.svg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/logo2.svg" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 
-	<link rel="stylesheet" href="/edukids/assets/Css/juegos/Jmatematico.css">
-	<link rel="stylesheet" href="/edukids/assets/Css/main.css">
+	<link rel="stylesheet" href="../assets/Css/juegos/Jmatematico.css">
+	<link rel="stylesheet" href="../assets/Css/main.css">
 </head>
 <body>
 	<main>
@@ -31,7 +31,7 @@
             
 			<section class="opciones">
                 <p>Juego programado por: EDUPLAY</p>
-                <a href="/edukids/index.html" class="cont_boton">
+                <a href="../index.html" class="cont_boton">
                     <button type="submit">Volver a inicio</button>
                 </a>
         </div>
@@ -55,10 +55,10 @@
 				<section class="opciones">
                 <p>Juego programado por: EDUPLAY</p>
 				<div class="op">
-					<a href="/edukids/index.html" class="cont_boton">
+					<a href="../index.html" class="cont_boton">
 						<button type="submit">Volver a inicio</button>
 					</a>
-					<a href="/edukids/juegoshtml/Jmatematico.html" class="cont_boton">
+					<a href="../juegoshtml/Jmatematico.html" class="cont_boton">
 						<button type="submit">Volver a menu</button>
 					</a>
 				</div>
@@ -66,6 +66,6 @@
 			</div>  
         </div>
 	</main>
-	<script src="/edukids/assets/Js/Jmatematico.js"></script>
+	<script src="../assets/Js/Jmatematico.js"></script>
 </body>
 </html>
