--- a/juegoshtml/memorama.html
+++ b/juegoshtml/memorama.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>memorama</title>
-    <link rel="icon" href="/edukids/assets/img/logo2.svg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/logo2.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/edukids/assets/Css/juegos/memorama.css">
+    <link rel="stylesheet" type="text/css" href="../assets/Css/juegos/memorama.css">
 </head>
 <body>
     <main>
@@ -58,7 +58,7 @@
                     <p>
                         Juego programado por: EDUPLAY
                     </p>
-                    <a href="/edukids/index.html" class="cont_boton">
+                    <a href="../index.html" class="cont_boton">
                         <button type="submit">
                             volver a inicio
                         </button>
@@ -68,6 +68,6 @@
     </main>
     <footer>       
     </footer>
-    <script src="/edukids/assets/Js/memorama.js" defer></script>
+    <script src="../assets/Js/memorama.js" defer></script>
 </body>
 </html>
