--- a/juegoshtml/trivia.html
+++ b/juegoshtml/trivia.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juego de trivia</title>
-    <link rel="icon" href="/edukids/assets/img/logo2.svg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/logo2.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/edukids/assets/Css/juegos/trivia.css">
+    <link rel="stylesheet" href="../assets/Css/juegos/trivia.css">
 </head>
 <body>
     <section id="cont_general">
@@ -40,13 +40,13 @@
             <p>
                 Juego programado por: EDUPLAY
             </p>
-            <a href="/edukids/index.html" class="cont_boton">
+            <a href="../index.html" class="cont_boton">
                 <button type="submit">
                     volver a inicio
                 </button>
             </a>
         </section>
     </section>
-    <script src="/edukids/assets/Js/trivia.js"></script>
+    <script src="../assets/Js/trivia.js"></script>
 </body>
 </html>
