--- a/paginas secundarias/politicaPrivacidad.html
+++ b/paginas secundarias/politicaPrivacidad.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>políticas de privacidad</title>
-    <link rel="icon" href="/edukids/assets/img/logo2.svg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/logo2.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,14 +18,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/Edukids/assets/Css/politicaPrivacidad.css">
-    <link rel="stylesheet" type="text/css" href="/Edukids/assets/Css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/Css/politicaPrivacidad.css">
+    <link rel="stylesheet" type="text/css" href="../assets/Css/main.css">
 
 </head>
 <body>
     <main>
         <div class="cont1">
-            <img src="/edukids/assets/img/logo2.svg" alt="logo">
+            <img src="../assets/img/logo2.svg" alt="logo">
             <div>
                 <h1>EDUPLAY</h1>
                 <h2><small>Mejorando la educación</small></h2>
@@ -53,7 +53,7 @@
             <p><strong>Seguridad:</strong><br>
                 Implementamos medidas de seguridad para proteger la información contra el acceso no autorizado, la alteración, la divulgación o la destrucción.
             </p>
-            <a href="/edukids/index.html" class="cont_boton">
+            <a href="../index.html" class="cont_boton">
                 <button type="submit">Volver al inicio</button>
             </a>    
         </div>
