--- a/paginas secundarias/sobrenosotros.html
+++ b/paginas secundarias/sobrenosotros.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
-    <link rel="icon" href="/edukids/assets/img/logo2.svg" type="image/x-icon">
+    <link rel="icon" href="../assets/img/logo2.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,8 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="/edukids/assets/Css/sobreNosotros.css">
-    <link rel="stylesheet" type="text/css" href="/edukids/assets/Css/main.css">
+    <link rel="stylesheet" type="text/css" href="../assets/Css/sobreNosotros.css">
+    <link rel="stylesheet" type="text/css" href="../assets/Css/main.css">
 
 
 </head>
@@ -28,7 +28,7 @@
                 <h1>EDUPLAY</h1>
                 <h2><small>Mejorando la educación</small></h2>
             </div>
-            <img src="/edukids/assets/img/logo2.svg" alt="logo">
+            <img src="../assets/img/logo2.svg" alt="logo">
         </div>
         <section class="sobre_nosotros">
             <div class="vision">
@@ -130,12 +130,12 @@
                 </ol>
                 <div class="btn_contenedor">
                     <div>
-                        <a href="/edukids/index.html">
+                        <a href="../index.html">
                             <button>Regresar a inicio</button>
                         </a>
                     </div>
                     <div>
-                        <a href="/edukids/paginas secundarias/contacto.html">
+                        <a href="../paginas secundarias/contacto.html">
                             <button>contacto</button>
                         </a>
                     </div>
