--- a/juegoshtml/memorama.html
+++ b/juegoshtml/memorama.html
@@ -50,7 +50,7 @@
                 </section>
                 <section class="seccion2">
                     <div id="aciertos" class="estadisticas">Aciertos: 0</div>
-                    <div id="t-restante" class="estadisticas">Tiempo: 30 segundos</div>
+                    <div id="t-restante" class="estadisticas">Tiempo: 1 minuto</div>
                     <div id="movimientos" class="estadisticas">movimientos: 0</div>
                 </section>
             </div>
