--- a/paginas secundarias/sobrenosotros.html
+++ b/paginas secundarias/sobrenosotros.html
@@ -30,7 +30,7 @@
             </div>
             <img src="../assets/img/logo2.svg" alt="logo">
         </div>
-        <section class="sobre_nosotros">
+        <section id="contenedorG" class="sobre_nosotros">
             <div class="vision">
                 <div>
                     <h4>Visión</h4>
